# bank-slip-extractor

./: .gitignore  README.md  app.py  main.py  pre_processor.ipynb  pyproject.toml  requirements.txt
core/: processor.py
old/: app.py
parsers/: base_parser.py  bbl_parser.py  factory.py  kbank_parser.py  krungthai_parser.py  scb_parser.py  ttb_parser.py
static/css/: style.css
templates/: index.html
