[project]
name = "bank-slip-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens>=3.0.1",
    "flask>=3.1.2",
    "ipykernel>=7.2.0",
    "ipython>=8.38.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "scikit-image>=0.25.2",
]
